Fix Trait Bar Overflow
Resolves #276

--- a/src/styles/applications.less
+++ b/src/styles/applications.less
@@ -658,7 +658,7 @@ body {
 
                 &[data-tab="perks"] {
                     grid-template-columns: 1fr 5px 1fr;
-                    grid-template-rows: 4rem calc(100% - 4rem);
+                    grid-template-rows: min-content auto;
                     grid-template-areas:
                         "traits traits traits"
                         "perks . abilities";
